--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+
 # spring.jpa.hibernate.ddl-auto=none
 # spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
