--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,15 @@
 spring.application.name=bni
 
-spring.datasource.url=jdbc:postgresql://postgres-db:5432/spingboot.db
+# spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
+# spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/FREEPDB1
+# spring.datasource.username=auth_user
+# spring.datasource.password=password123
+# spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+# spring.jpa.hibernate.ddl-auto=none
+# spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/java-project
 spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -9,8 +18,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-management.endpoints.web.exposure.include=health,info
+management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
-
-# spring.jpa.hibernate.ddl-auto=none
-# spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
