--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.application.name=bni
 # spring.jpa.hibernate.ddl-auto=none
 # spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/java-project
+spring.datasource.url=jdbc:postgresql://postgresdb:5432/java-project
 spring.datasource.username=admin
 spring.datasource.password=admin123
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -20,3 +20,6 @@ spring.jpa.show-sql=true
 
 management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
+
+file.upload-dir=uploads
+spring.servlet.multipart.enabled=true
