--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=bni
 
-# spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
+# spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1o
 # spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/FREEPDB1
 # spring.datasource.username=auth_user
 # spring.datasource.password=password123
