--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,23 +6,43 @@ on:
       - master
 
 jobs:
-  trigger-build:
+name: Notify Telegram on Merge to Main/Master
+
+on:
+  push:
+    branches:
+      - main
+      - master
+
+jobs:
+  notify:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout source code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
+        
+      - name: Send Telegram Notification
+        run: |
+          curl -X POST "https://api.telegram.org/bot8161018250:AAEChR_GmId41XjMsj4__YPVqrIXqIZd4Ns/sendMessage" \
+            -d chat_id=5850915085 \
+            -d text="🚨 Merge to Main/Master Branch 🚨\nA merge has been made to the main/master branch. Please review the changes!"
+  # trigger-build:
+  #   runs-on: ubuntu-latest
 
-    - name: Install OC CLI
-      run: |
-        curl -LO https://mirror.openshift.com/pub/openshift-v4/clients/ocp/latest/openshift-client-linux.tar.gz
-        tar -xzf openshift-client-linux.tar.gz
-        sudo mv oc kubectl /usr/local/bin/
+  #   steps:
+  #   - name: Checkout source code
+  #     uses: actions/checkout@v3
 
-    - name: Login to OpenShift
-      run: |
-        oc login --token="${{secrets.OC_TOKEN}}" --server="${{secrets.OC_SERVER}}"
+  #   - name: Install OC CLI
+  #     run: |
+  #       curl -LO https://mirror.openshift.com/pub/openshift-v4/clients/ocp/latest/openshift-client-linux.tar.gz
+  #       tar -xzf openshift-client-linux.tar.gz
+  #       sudo mv oc kubectl /usr/local/bin/
 
-    - name: Start OpenShift Build
-      run: |
-        oc start-build "${{secrets.OC_BUILD_NAME}}" -n "${{secrets.OC_NAMESPACE}}" --wait --follow
+  #   - name: Login to OpenShift
+  #     run: |
+  #       oc login --token="${{secrets.OC_TOKEN}}" --server="${{secrets.OC_SERVER}}"
+
+  #   - name: Start OpenShift Build
+  #     run: |
+  #       oc start-build "${{secrets.OC_BUILD_NAME}}" -n "${{secrets.OC_NAMESPACE}}" --wait --follow
